...
  Column(modifier = modifier.fillMaxSize().testTag("monthView")) {
    Row(
        modifier =
            Modifier.fillMaxWidth()
                .padding(8.dp)
                .clickable { onHeaderClick() }
                .testTag("monthHeader"),
        horizontalArrangement = Arrangement.Center) {
          Text(
              text =
                  currentMonth.format(
                      DateTimeFormatter.ofPattern("MMMM yyyy", Locale.getDefault())),
              style = Typography.titleMedium.copy(fontWeight = FontWeight.Bold),
              modifier = Modifier.testTag("monthHeaderText"))
        }

    CalendarDaysHeader(modifier = Modifier.testTag("calendarDaysHeader"))

    LazyVerticalGrid(
        columns = GridCells.Fixed(7),
        modifier = Modifier.fillMaxWidth().testTag("monthViewCalendarGrid")) {
          val firstDayOfMonth = currentMonth.atDay(1)
          val lastDayOfMonth = currentMonth.atEndOfMonth()
          val firstDayOfGrid =
              firstDayOfMonth.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY))
          val lastDayOfGrid = lastDayOfMonth.with(TemporalAdjusters.nextOrSame(DayOfWeek.SUNDAY))

...
